fix text-overflow

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap5-override.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-bootstrap5-override.less
@@ -378,4 +378,9 @@
     border-top-left-radius: 4px !important;
     border-bottom-left-radius: 4px !important;
   }
+
+  // w9
+  #fr-view-component≡xf-795≡≡c {
+    width: 234px;
+  }
 }
